# disgraphics

./: .gitignore  CMakeLists.txt  README.md  main.cpp  reference.txt
examples/shading/: CMakeLists.txt  camera.cpp  camera.hpp  main.cpp  utils_camera.cpp  utils_camera.hpp  utils_window.cpp  utils_window.hpp  window.cpp  window.hpp
gr/: gr.hpp
include/: disgraphics.hpp
